Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5540

Windows connection close error: SCHANNEL_SHUTDOWN called twice

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.27
    • None
    • C++ Client
    • None
    • Windows c++

    Description

      SslAsynchIO::queueWriteClose can be called by both user and IO threads causing two SCHANNEL_SHUTDOWN actions in separate threads and a spurious error from SChannel. A mutex can prevent the second shutdown.

      Attachments

        Activity

          People

            cliffjansen Clifford Jansen
            cliffjansen Clifford Jansen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: