QPID-5540: use mutex to ensure single SCHANNEL_SHUTDOWN

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1564644 13f79535-47bb-0310-9956-ffa450edef68